<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_qr_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/table_border"
        android:gravity="start"
        android:padding="8dp"
        android:text="@string/qr_code"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_vehicle_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/table_border"
        android:gravity="start"
        android:padding="8dp"
        android:text="@string/vehichle_name"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_vehicle_owner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/table_border"
        android:gravity="start"
        android:padding="8dp"
        android:text="@string/owner"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_vehicle_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/table_border"
        android:gravity="start"
        android:padding="8dp"
        android:text="@string/number"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/table_border"
        android:gravity="start"
        android:padding="8dp"
        android:text="@string/timestamp"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/table_border"
        android:gravity="start"
        android:padding="8dp"
        android:text="@string/entry"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/table_border"
        android:gravity="start"
        android:padding="8dp"
        android:text="@string/exit"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="14sp" />
</TableRow>
