<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.QrcodeFragment">

    <TextView
        android:id="@+id/ln_atribut"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:background="@color/bg"
        android:gravity="center"
        android:text="@string/history_qr_code"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:id="@+id/tv_selected_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/selected_date"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="16sp"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/btn_pick_date"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:contentDescription="@string/pick_date"
            android:src="@drawable/ic_date" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/table_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:stretchColumns="*">

                <!-- Table Header -->
                <TableRow android:background="@color/bg">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:padding="8dp"
                        android:text="@string/qr_code"
                        android:textColor="?attr/colorOnPrimary"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:padding="8dp"
                        android:text="@string/vehicle_name"
                        android:textColor="?attr/colorOnPrimary"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:padding="8dp"
                        android:text="@string/owner"
                        android:textColor="?attr/colorOnPrimary"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:padding="8dp"
                        android:text="@string/number"
                        android:textColor="?attr/colorOnPrimary"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:padding="8dp"
                        android:text="@string/timestamp"
                        android:textColor="?attr/colorOnPrimary"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:padding="8dp"
                        android:text="@string/entry"
                        android:textColor="?attr/colorOnPrimary"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:padding="8dp"
                        android:text="@string/exit"
                        android:textColor="?attr/colorOnPrimary"
                        android:textStyle="normal" />
                </TableRow>
            </TableLayout>
        </HorizontalScrollView>
    </ScrollView>
</LinearLayout>
