<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".ui.FormGenerateActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ln_atribut"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@color/bg"
            android:gravity="center"
            android:text="@string/form_generate_qr_code"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical"
            android:padding="15dp">


            <ImageView
                android:id="@+id/img_vehicle"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rounded"
                android:clipToOutline="true"
                android:src="@drawable/no_image" />

            <TextView
                android:id="@+id/txt_vehicle_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/vehichle_name"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edt_vehicle_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_background"
                android:hint="@string/type_here"
                android:minHeight="48dp"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_vehicle_colour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/vehicle_colour"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edt_vehicle_colour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_background"
                android:hint="@string/type_here"
                android:minHeight="48dp"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_vehicle_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/vehicle_owner"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/vehicle_owner_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_background"
                android:minHeight="48dp"
                android:padding="12dp"
                android:prompt="@string/vehicle_owner_hint"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/txt_vehicle_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/vehicle_number"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edt_vehicle_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_background"
                android:hint="@string/type_here"
                android:minHeight="48dp"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_select_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:text="@string/upload_image"
                android:layout_gravity="center"
                android:textColor="?attr/colorOnPrimary" />

            <Button
                android:id="@+id/btn_generate_qr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/button_background"
                android:text="@string/generate_qr"
                android:textColor="?attr/colorOnPrimary" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>