<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="?android:attr/selectableItemBackground"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/img_qr_code"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded"
                android:clipToOutline="true"
                android:contentDescription="@string/qr_code_image"
                android:src="@drawable/no_image" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="59dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        android:text="@string/name"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_vehicle_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/avanza"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/number_item"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_vehicle_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="P89012"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/color"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Blue"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/owner"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_owner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="PT.tel"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="13sp" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/img_trash"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_delete" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
